@@ -1,3 +1,9 @@
+2004-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* src/htdocs/releases/gst-plugins/0.8.5.xml:
+	* src/htdocs/releases/gst-plugins/Makefile.am:
+	  writing release notes for gst-plugins 0.8.5
+
 2004-10-05  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/entities.gst:
